--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@ Nowadays, I am in search for some web development position. In my spare time, I 
 
                 <div class="row">
                 <div class="col-md-12"> 
-                        <img src="img/skillset.png"  class="center-block visible-lg visible-xl hidden-xs visible-md visible-sm" style="max-width: 60%; margin-bottom: 30px;">
-                        <img src="img/skillset.png"  class="center-block hidden-lg hidden-xl visible-xs hidden-md hidden-sm" style="max-width: 100%; margin-bottom: 30px;">
+                        <img src="img/skillset1.png"  class="center-block visible-lg visible-xl hidden-xs visible-md visible-sm" style="max-width: 60%; margin-bottom: 30px;">
+                        <img src="img/skillset1.png"  class="center-block hidden-lg hidden-xl visible-xs hidden-md hidden-sm" style="max-width: 100%; margin-bottom: 30px;">
                 </div>
                 </div>
 
