--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
                     <div class="row">
                         <div class="main-portfolio col-md-12" >
-                        <p class="text-center" style="padding-right: 30px; padding-left: 30px" > My name is Zahra and welcome to my portfolio. I am a Computer Science graduate. I took courses in web design during my undergraduate but most of the things I have learnt are self-taught and my previous work as a web developer during my stay in Japan. Nowadays, I am in search for a challenging web development position. In my spare time, I drink tea, take photographs, eat Haagen-Dazs and try different restaurants. I am also doing some interesting freelance projects on the side and taking an online nano-degree. Enjoy a stroll around my work and pop me an email if you have any questions!
+                        <p class="text-center" style="padding-right: 30px; padding-left: 30px" > My name is Zahra and welcome to my portfolio. I am a Computer Science graduate. I took courses in web design during my undergraduate but most of the things I have learnt are self-taught and my previous work as a web developer during my stay in Japan. Nowadays, I am in search of a challenging web development position. In my spare time, I drink tea, take photographs, eat Haagen-Dazs and try different restaurants. I am also doing some interesting freelance projects on the side and taking an online nano-degree. Enjoy a stroll around my work and pop me an email if you have any questions!
                             </p> 
                         </div>
                     </div>
