change email id to wd

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 <p class="contact-temp">39 West Lexington Street, Baltimore, 21201</p> -->
           
                 <h3 class="contact-temp" style="font-weight: bold !important; color: #ddd;"><i class="fa fa-envelope fa-1x icon-style"></i> E-Mail:</h3>
-                <p class="contact-temp" style="color: #ddd; margin-left: 25px">zahranoorcs1514@gmail.com</p>  
+                <p class="contact-temp" style="color: #ddd; margin-left: 25px">zahranoorwd@gmail.com</p>  
          
                 <h3 class="contact-temp" style="font-weight: bold !important;color: #ddd;"><i class="fa fa-user fa-1x icon-style"></i> Name:</h3>
                 <p class="contact-temp" style="color: #ddd; margin-left: 25px;">Zahra Noor</p>
